simplify fullscreen management and fix #264, map behind fullscreen

--- a/web/css/000-controls.css
+++ b/web/css/000-controls.css
@@ -53,8 +53,12 @@ a:hover {
 	cursor: pointer;
 }
 
-.hidden, .hidden-by-option, .hidden-by-fullscreen, .hidden-by-pinch {
+.hidden, .hidden-by-option, .hidden-by-pinch {
 	display: none !important;
+}
+
+#fullscreen-wrapper.fullscreen #album-view.media-view-container, #fullscreen-wrapper.fullscreen .title {
+	display: none;
 }
 
 img.title-img {
